Change Log for the Area Diffraction Machine

-------

Change log for Version 2 (version 2 has all the version 1 changes in it):

Changes in the Betas

    Major
    -   Adding support for Bruker data files.
    -   The program now uses Josh's formuals for the geometric
    	transform derived in the software manual instead of
	Abhik's formulas. See the manual for a discussion
        of these equations.
    -   Modified the caking and integrating algorithm so that 
    	they would set all intensity integration data or cake 
        data values that are less than 0 to equal exactly 0. This 
        was done so that there wouldn't be any ambiguity since cake 
        and intensity values are sometimes given negative values to 
        signify other things happening in the data (like pixel masks 
	or no values put into a bin). 
    -   Allow for caking in 2theta.
    -   The program now ignores any peaks found inside polygon masks. 
        Also, peaks are no longer displayed on top of polygon masks in 
	the diffraction and cake displays. 
    -   Improved the formatting of peak list files. The peak list 
        files are now space separated instead of tab separated which 
	makes the output look nicer. The header is also more verbose. 
    -   New "Save Last Fit" button can be used to save all of the 
        information about the previous calibration to a text file.
    -   The intensity integration will display minor tic marks on the 
        y axis when displaying a log scale. 
    -   New "Preferences" menu opened form the "File" menu can be 
        used to specify the default folder to select files form.
    -   There is a new option called "Set As Initialization" which can 
        be used to save a recorded macro so that it is run each time the 
	program opens. You set this by recording a macro like usual, but 
	then pushing the "Set As Initialization" option instead of the 
	"Stop Record Macro". The saved macro file will be run whenever the 